# Kaggle_Boys_and_Girls_HW2

./: .gitignore  README.md  STACKING_REPORT.md  pyproject.toml  requirements.txt
data/: submission_stacking_optuna_CV 平均準確率 0.8802_Validation Accuracy 0.8906.csv
results/: submission_advanced_ensemble.csv  submission_blending_ultimate.csv  submission_stacking_v2.csv  submission_ultimate.csv
src/: Boy_or_Girl_PI_bge_Willy.ipynb  ensemble.ipynb  ensemble_org.ipynb  ensemble_ultimate_v4.ipynb  stacking_ultimate.ipynb
