[project]
name = "kaggle-boys-and-girls-hw2"
version = "0.1.0"
description = "Kaggle Boys and Girls HW2 Project for predicting gender."
dependencies = [
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "lightgbm>=4.6.0",
    "ipykernel>=7.2.0",
]

[tool.setuptools]
packages = ["src"]
