[project]
name = "kaggle-boys-and-girls-hw2"
version = "0.1.0"
description = "Kaggle Boys and Girls HW2 Project for predicting gender."
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "category-encoders>=2.6.0",
    "sentence-transformers>=3.0.0",
    "optuna>=3.6.0",
    "matplotlib>=3.8.0",
    "ipykernel>=6.29.0",
    "tf_keras>=2.20.1",
]

[tool.setuptools]
packages = ["src"]
